applications/monitoring/netdat-dash/netdata-parent-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: netdata-parent
  namespace: netdata
  labels:
    app: netdata
    component: parent
spec:
  type: ClusterIP
  selector:
    app: netdata
    component: parent
  ports:
    - name: http
      port: 19999
      targetPort: 19999
    - name: statsd
      port: 8125
      protocol: UDP
      targetPort: 8125
