applications/monitoring/netdat-dash/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netdata-api
  namespace: netdata
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - metrics.catdevops.net
    secretName: metrics-catdevops-net-tls
  rules:
  - host: metrics.catdevops.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netdata-minimal-api
            port:
              number: 8080
